# ruvector

./: .gitignore  Cargo.toml  README.md  training-data-optimal-v2.jsonl  training-data-optimal.jsonl  training-data-sourcemaps.jsonl  training-data-v2-compact.jsonl  training-data-v2.jsonl  training-data.jsonl
crates/mcp-brain-server/: Cargo.toml  Dockerfile
crates/mcp-brain-server/src/: gist.rs  graph.rs  main.rs  pipeline.rs  routes.rs  store.rs  symbolic.rs  types.rs  voice.rs  web_ingest.rs
crates/neural-trader-coherence/src/: lib.rs
crates/neural-trader-core/src/: lib.rs
crates/neural-trader-replay/src/: lib.rs
crates/ruvector-attention-node/npm/win32-x64-msvc/: attention.win32-x64-msvc.node
crates/ruvector-cnn/tests/: kernel_equivalence.rs
crates/ruvector-coherence/src/: spectral.rs
crates/ruvector-consciousness/src/: simd.rs
crates/ruvector-decompiler/: README.md
crates/ruvector-decompiler/examples/: run_on_cli.rs
crates/ruvector-decompiler/src/: beautifier.rs  inferrer.rs  lib.rs  neural.rs  parser.rs  partitioner.rs  training.rs  transformer.rs  tree.rs
crates/ruvector-mincut-gated-transformer-wasm/examples/: web_scorer.rs
crates/ruvector-mincut-wasm/: Cargo.toml
crates/ruvector-mincut/benches/: optimization_bench.rs
crates/ruvector-mincut/src/optimization/: mod.rs
crates/ruvector-solver/src/: simd.rs  types.rs
crates/ruvllm/: Cargo.toml  README.md
crates/ruvllm-wasm/: Cargo.toml  README.md
crates/ruvllm-wasm/src/: lib.rs  pi_quant_wasm.rs  quant_bench_wasm.rs
crates/ruvllm/benches/: pi_quant_bench.rs
crates/ruvllm/src/: lib.rs
crates/ruvllm/tests/: acceptance_gates.rs  hadamard_tests.rs  pi_quant_tests.rs  simd_equivalence_tests.rs  ste_tests.rs
crates/rvm/: README.md
crates/sona/src/: engine.rs
docs/adr/: ADR-084-neural-trader-ruvector.md  ADR-090-ultra-low-bit-qat-pi-quantization-ddd.md  ADR-091-int8-cnn-quantization-ddd.md  ADR-137-npm-decompiler-cli-and-mcp.md  ADR-143-implement-missing-capabilities.md  ADR-144-diskann-vamana-implementation.md  ADR-148-brain-hypothesis-engine.md  ADR-149-brain-performance-optimizations.md  ADR-150-pi-brain-ruvltra-tailscale.md
docs/research/claude-code-rvsource/: 00-index.md  20-sota-decompiler-research.md  21-model-weight-analysis.md  claude-code-v2.1-runnable.rvf  claude-code-v2.1-runnable.rvf.manifest.json
docs/research/climate-consciousness/: RESEARCH.md
docs/research/exotic-structure-discovery/: 03-proof-evidence-appendix.md  04-experiment-output.md  05-new-discoveries.md  06-practical-discoveries.md  07-seti-discoveries.md  08-world-changing-discoveries.md  GOAP-exotic-structure-discovery.md  boundary-first-discovery-paper.md
docs/research/gene-consciousness/: RESEARCH.md
docs/research/seizure-prediction/: 03-clinical-landscape-review.md  04-therapeutic-simulation.md  05-real-eeg-results.md  06-optimized-results.md  07-multi-seizure-results.md  clinical-report.md
examples/boundary-discovery/: Cargo.toml
examples/boundary-discovery/src/: main.rs
examples/brain-boundary-discovery/: Cargo.toml
examples/brain-boundary-discovery/src/: main.rs
examples/climate-consciousness/: Cargo.toml
examples/climate-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/cmb-boundary-discovery/: Cargo.toml
examples/cmb-boundary-discovery/src/: main.rs
examples/data/discoveries/: swarm_cme.json  swarm_crossref.json  swarm_earthquakes.json  swarm_economics.json  swarm_genomics.json  swarm_geostorm.json  swarm_gw.json  swarm_ips.json  swarm_materials.json  swarm_medical.json  swarm_neos.json  swarm_physics.json  swarm_proteins.json
examples/decompiler-dashboard/: index.html  package.json  tailwind.config.js
examples/decompiler-dashboard/src/: App.tsx  index.css  vite-env.d.ts
examples/earthquake-boundary-discovery/: Cargo.toml
examples/earthquake-boundary-discovery/src/: main.rs
examples/ecosystem-consciousness/: Cargo.toml  RESEARCH.md
examples/ecosystem-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/frb-boundary-discovery/: Cargo.toml
examples/frb-boundary-discovery/src/: main.rs
examples/gene-consciousness/: Cargo.toml
examples/gene-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/health-boundary-discovery/: Cargo.toml
examples/health-boundary-discovery/src/: main.rs
examples/infrastructure-boundary-discovery/: Cargo.toml
examples/infrastructure-boundary-discovery/src/: main.rs
examples/market-boundary-discovery/: Cargo.toml
examples/market-boundary-discovery/src/: main.rs
examples/music-boundary-discovery/: Cargo.toml
examples/music-boundary-discovery/src/: main.rs
examples/pandemic-boundary-discovery/: Cargo.toml
examples/pandemic-boundary-discovery/src/: main.rs
examples/quantum-consciousness/: Cargo.toml  RESEARCH.md
examples/quantum-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/real-eeg-analysis/: Cargo.toml
examples/real-eeg-analysis/src/: main.rs
examples/real-eeg-multi-seizure/: Cargo.toml
examples/real-eeg-multi-seizure/src/: main.rs
examples/scipix/: Cargo.toml
examples/seizure-clinical-report/: Cargo.toml
examples/seizure-clinical-report/src/: main.rs
examples/seizure-therapeutic-sim/: Cargo.toml
examples/seizure-therapeutic-sim/src/: main.rs
examples/seti-boundary-discovery/: Cargo.toml
examples/seti-boundary-discovery/src/: main.rs
examples/seti-exotic-signals/: Cargo.toml
examples/seti-exotic-signals/src/: main.rs
examples/temporal-attractor-discovery/: Cargo.toml
examples/temporal-attractor-discovery/src/: main.rs
examples/void-boundary-discovery/: Cargo.toml
examples/void-boundary-discovery/src/: main.rs
examples/weather-boundary-discovery/: Cargo.toml
examples/weather-boundary-discovery/src/: main.rs
npm/: package-lock.json
scripts/: rebuild-all-versions.mjs  swarm_train_15.sh
scripts/lib/: module-splitter.mjs
scripts/training/: build-optimal-dataset-v2.py  build-optimal-dataset.py  evaluate-model.py  export-weights-bin.py  extract-sourcemap-pairs.mjs  train-deobfuscator-v2.py
(+986 files in other folders)
